@@ -660,6 +660,9 @@ Release 2.6.0 - UNRELEASED
     YARN-2701. Potential race condition in startLocalizer when using
     LinuxContainerExecutor. (Xuan Gong via jianhe)
 
+    YARN-2720. Windows: Wildcard classpath variables not expanded against
+    resources contained in archives. (Craig Welch via cnauroth)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
